# nexus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  PROFILE_README.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backtest-report.yml  ci.yml
docs/: architecture.md  discord-export-guide.md  risk-management.md  strategies.md
nexus/: __init__.py  __main__.py  alerter.py  backtest.py  broker.py  broker_ibkr.py  broker_moomoo.py  broker_webull.py  config.py  dashboard.py  discord_feed.py  discord_loader.py  dte_engine.py  engine.py  indicators.py  logger.py  main.py  memory.py  news_llm.py  react_agent.py  risk.py  scanner.py  strategy.py  strategy_events.py  strategy_irongrid.py  strategy_news.py  strategy_options.py  swarm.py  tracker.py  twitter_feed.py
nexus/web/: __init__.py  api.py  ws.py
nexus/web/static/: app.js  index.html  styles.css
scripts/: filter_discord_export.py
tests/: test_alerter.py  test_backtest.py  test_config.py  test_discord_feed.py  test_engine.py  test_events.py  test_indicators.py  test_memory.py  test_news_llm.py  test_orb_meanrev.py  test_react_agent.py  test_risk.py  test_strategy.py  test_swarm.py  test_tracker.py  test_twitter_feed.py  test_web_api.py
