[project]
name = "nexus-trader"
version = "3.0.0"
description = "Production-grade long/short algorithmic trading system"
authors = [{name = "Pruthvi Garlapati", email = "pruthvig1998@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.13.0",
    "aiohttp>=3.9.0",
    "anthropic>=0.34.0",
    "click>=8.1.7",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "yfinance>=0.2.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.7.0",
]
ibkr = [
    "ib_insync>=0.9.86",
]
moomoo = [
    "moomoo-api>=10.0.0",
]
webull = [
    "webull>=0.2.0",
]
discord = [
    "discord.py>=2.3.0",
]
all-brokers = [
    "ib_insync>=0.9.86",
    "moomoo-api>=10.0.0",
    "webull>=0.2.0",
]

[project.scripts]
nexus = "nexus.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP", "RUF"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert in tests
    "S106",   # hardcoded passwords (test fixtures)
    "S110",   # try-except-pass
    "S311",   # random (used for jitter)
    "S314",   # XML parsing (twitter_feed uses stdlib xml)
    "B007",   # unused loop variable
    "B008",   # function call in default arg (click decorators)
    "B905",   # zip without strict=
    "UP006",  # List -> list (codebase uses typing.List)
    "UP007",  # Optional -> X | None
    "UP015",  # unnecessary open mode
    "UP017",  # datetime.UTC alias
    "UP035",  # deprecated typing imports
    "UP042",  # str+Enum -> StrEnum
    "UP045",  # Optional -> X | None
    "RUF001", # ambiguous unicode
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
    "RUF023", # unsorted __slots__
    "RUF043", # regex metacharacters in match=
    "RUF046", # redundant int cast
    "RUF059", # unused unpacked variable
    "RUF100", # unused noqa
    "B904",   # raise from in except clauses
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*"]
